--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="sketch.js"></script>
     <script src="src/grid.js"></script>
     <script src="src/GridDraw2D.js"></script>
+    <script src="src/GridDraw3D.js"></script>
   </body>
 </html>
 
